--- a/2.BeautifulSoupAndRequests.ipynb
+++ b/2.BeautifulSoupAndRequests.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1209,10 +1209,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<th>\n",
+       "                             Team Name\n",
+       "                         </th>,\n",
+       " <th>\n",
+       "                             Year\n",
+       "                         </th>,\n",
+       " <th>\n",
+       "                             Wins\n",
+       "                         </th>,\n",
+       " <th>\n",
+       "                             Losses\n",
+       "                         </th>,\n",
+       " <th>\n",
+       "                             OT Losses\n",
+       "                         </th>,\n",
+       " <th>\n",
+       "                             Win %\n",
+       "                         </th>,\n",
+       " <th>\n",
+       "                             Goals For (GF)\n",
+       "                         </th>,\n",
+       " <th>\n",
+       "                             Goals Against (GA)\n",
+       "                         </th>,\n",
+       " <th>\n",
+       "                             + / -\n",
+       "                         </th>]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.find_all('th')"
+   ]
   }
  ],
  "metadata": {
